feat(23-02): Refact da classe produto e implementaçao da herança